新增一個 table 在頁面中，試著用屬性繫結將 colspan 修改為從 AppComponent 元件中取得。

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,3 +56,9 @@
   <p>Created by <a href="http://todomvc.com">you</a></p>
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
+<table>
+  <tr>
+    <td [colSpan]="col">Two Column</td>
+    <td>One Column</td>
+  </tr>
+</table>
