--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
     <app-title></app-title>
-    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus>
+    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus (keyup.enter)="addTodo($event.target)" [(ngModel)]="todo">
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
@@ -56,6 +56,12 @@
   <p>Created by <a href="http://todomvc.com">you</a></p>
   <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
+<table>
+  <tr>
+    <td [colSpan]="col">Two Column</td>
+    <td>One Column</td>
+  </tr>
+</table>
 <table>
   <tr>
     <td [colSpan]="col">Two Column</td>
