--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
     <app-title></app-title>
-    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus (keyup.enter)="addTodo($event.target)" [ngModel]="todo" (ngModelChange)="todoChange($event)">
+    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus (keyup.enter)="addTodo($event.target)" [(ngModel)]="todo">
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main">
