--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
   <header class="header">
     <app-title></app-title>
-    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus (keyup.enter)="addTodo($event.target)" [(ngModel)]="todo">
+    <input class="new-todo" [placeholder]="inputHint" [attr.data-myhint]="inputHint" autofocus (keyup.enter)="addTodo()" [(ngModel)]="todo">
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <section class="main" *ngIf="todos.length>0">
@@ -11,7 +11,7 @@
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
       <li *ngFor="let item of todos" [ngStyle]="{'color': item.done? '#d9d9d9':'',
-          'text-decoration': item.done? 'line-through':'' }">
+                                                 'text-decoration': item.done? 'line-through':'' }">
         <div class="view">
           <input class="toggle" type="checkbox" [(ngModel)]="item.done">
           <label>{{item.value}}</label>
@@ -22,24 +22,8 @@
     </ul>
   </section>
   <!-- This footer should hidden by default and shown when there are todos -->
-  <footer class="footer" *ngIf="todos.length>0">
-    <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> item left</span>
-    <!-- Remove this if you don't implement routing -->
-    <ul class="filters">
-      <li>
-        <a class="selected" href="#/">All</a>
-      </li>
-      <li>
-        <a href="#/active">Active</a>
-      </li>
-      <li>
-        <a href="#/completed">Completed</a>
-      </li>
-    </ul>
-    <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Clear completed</button>
-  </footer>
+  <!--把todos傳給子元件的footerTodos-->
+  <app-footer [footerTodos]="todos"></app-footer>
 </section>
 <footer class="info">
   <p>Double-click to edit a todo</p>
