--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <ul class="todo-list">
       <!-- These are here just to show the structure of the list items -->
       <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-      <li *ngFor="let item of todos" [ngStyle]="{'color': item.done? '#d9d9d9':'',
+      <li *ngFor="let item of todos | filter: filterType" [ngStyle]="{'color': item.done? '#d9d9d9':'',
                                                  'text-decoration': item.done? 'line-through':'' }">
         <div class="view">
           <input class="toggle" type="checkbox" [(ngModel)]="item.done">
@@ -24,7 +24,9 @@
   <!-- This footer should hidden by default and shown when there are todos -->
   <!--把todos傳給子元件的footerTodos-->
   <!--把子元件的clearCompleted事件傳給clearCompleted()方法-->
-  <app-footer [footerTodos]="todos" (clearCompleted)="clearCompleted($event)"></app-footer>
+  <app-footer [footerTodos]="todos"
+              (clearCompleted)="clearCompleted($event)"
+              (switchFilterType)="switchType($event)"></app-footer>
 </section>
 <footer class="info">
   <p>Double-click to edit a todo</p>
